samples/_failures_safe/1761547428_4eefc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31ca2007.c: In function ‘main’:
./samples/SAFE/__tmp_31ca2007.c:142:9: error: expected expression at end of input
  142 |         if (
      |         ^~
./samples/SAFE/__tmp_31ca2007.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31ca2007.c:142:9: error: expected declaration or statement at end of input
